# uphide

./: CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml  uac.res  uphide.bas  uphide.c  uphide.manifest
src/: cli.rs  com.rs  com_wrapper.cpp  com_wrapper.hpp  error.rs  lib.rs  main.cpp  main.rs  update.rs  update_manager.cpp  update_manager.hpp  uphide.manifest  uphide.rc
